# back_pase_lista

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose-build.yml  docker-compose.yml  pyproject.toml
Perfiles/: Python-local.code-profile
api_rest_base_python/: main.py
api_rest_base_python/auth/routers/: auth_router.py
api_rest_base_python/auth/services/: auth.py  auth_service.py  email_validator.py  security.py  validate_password.py
api_rest_base_python/config/: db_config.py  settings.py
api_rest_base_python/router/: api.py
api_rest_base_python/users/models/: users_model.py
api_rest_base_python/users/repository/: user_repository.py
api_rest_base_python/users/routers/v1/: users.py
api_rest_base_python/users/schemas/: users_schema.py
api_rest_base_python/users/services/: user_service.py
api_rest_base_python/utils/: init_db.py
docker/base/: Dockerfile
docker/runtime/: Dockerfile
sql/: init.sql
